# self-diary

./: .editorconfig  .env.example  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/v1/: attachments.py  auth.py  entries.py  router.py  tags.py
backend/app/core/: __init__.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  attachment.py  entry.py  session.py  tag.py  user.py
backend/app/schemas/: __init__.py  attachment.py  auth.py  entry.py  tag.py
backend/app/services/: attachment_service.py  auth_service.py  entry_service.py  s3_client.py  tag_service.py
backend/tests/: __init__.py  conftest.py  test_attachments.py  test_auth.py  test_entries.py  test_flows.py  test_health.py  test_tags.py
backend/tests/load/: locustfile.py
backend/tests/unit/: test_attachment_service.py  test_auth_service.py  test_entry_service.py  test_security.py  test_tag_service.py
docs/: ACCESSIBILITY_AUDIT.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  SECURITY_AUDIT.md
infra/: README.md
mobile/: README.md  app.json  eas.json  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
scripts/: reset-db.sh  seed.py
web/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  jest.config.js  (+3 more)
(+102 files in other folders)
